# cahn-hilliard-libmesh

./: CMakeLists.txt
apps/: CMakeLists.txt  cahn_hilliard_ex.cpp  cahn_hilliard_ex.in  miscellaneous_ex5.cpp  three_species.cpp
cmake/: FindLibMesh.cmake
src/: CMakeLists.txt
src/chdg/: assembly_data.h  cahn_hilliard.cpp  cahn_hilliard.h  forms.cpp  forms.h  integrator.cpp  integrator.h  local_system.h  mark_boundary.h  time_measurement.cpp  time_measurement.h
unittests/: CMakeLists.txt
unittests/src/: test_advection.cpp  test_elliptic.cpp
unittests/test_utils/: test_utils.h
